# trendy

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest-coverage.txt  sitemap.xml
.github/workflows/: docs-publish.yaml  google-trend-de.yaml  google-trend-gb-bodysuit.yaml  google-trend-us-small-appliances.yaml  tests.yaml
changelog/: index.html
docs/: CNAME
docs/references/: cli.md
docs/references/aggregate/: agg.md  config.md
docs/references/manual/: config.md  get_trends.md
docs/tutorials/: aggregate_trends.md  index.md  use_serpapi.md
notebooks/: pytrends_experiments.py
references/: index.html
references/cli/: index.html
search/: search_index.json
sm_trendy/: cli.py  config.py  get_trends.py
sm_trendy/aggregate/: agg.py
sm_trendy/manual/: config.py  get_trends.py
sm_trendy/use_pytrends/: config.py  get_trends.py
sm_trendy/use_serpapi/: config.py  get_trends.py
sm_trendy/user_serpapi/: config.py  get_trends.py
sm_trendy/utilities/: config.py  request.py  storage.py
tests/: conftest.py  test_config.py  test_get_trends.py
tests/data/: test_config.json  test_keyword_motion_sensor.csv
tests/test_agg/: test_agg.py
tests/test_manual/: conftest.py  test_config.py  test_get_trends.py
tests/test_use_pytrends/: test_config.py  test_get_trends.py
tests/test_use_serpapi/: test_config.py  test_get_trends.py
tests/test_utilities/: test_config.py  test_storage.py
tutorials/: index.html
tutorials/aggregate_trends/: index.html
tutorials/use_serpapi/: index.html
(+46 files in other folders)
